--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <a href="#about" class="nav-item nav-link">About</a>
           <a href="#qualification" class="nav-item nav-link">Quality</a>
           <a href="#skill" class="nav-item nav-link">Skills</a>
-          <a href="#service" class="nav-item nav-link">Service</a>
+          <!--<a href="#service" class="nav-item nav-link">Service</a>-->
           <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
-          <a href="#testimonial" class="nav-item nav-link">Review</a>
+          <!--<a href="#testimonial" class="nav-item nav-link">Review</a>-->
           <a href="blogpage.html" class="nav-item nav-link">Blog</a>
           <a href="#contact" class="nav-item nav-link">Contact</a>
         </div>
@@ -792,7 +792,7 @@
     </div>
     <!-- Portfolio End -->
 
-    <!-- Testimonial Start -->
+    <!-- Testimonial Start 
     <div class="container-fluid py-5" id="testimonial">
       <div class="container">
         <div
@@ -861,7 +861,7 @@
         </div>
       </div>
     </div>
-    <!-- Testimonial End -->
+    Testimonial End -->
 
     <!-- Blog Start -->
     <div class="container-fluid pt-5" id="blog">
@@ -1037,7 +1037,6 @@
     >
       <div class="container text-center py-5">
         <div class="d-flex justify-content-center mb-4">
-      
           <a
             class="btn btn-light btn-social mr-2"
             href="https://www.facebook.com/profile.php?id=100092637065571"
